@@ -1,6 +1,7 @@
 Ver.2.3.2:
 * improve quotes support, e.g. fix plasma crash
 * rewrite main widget to signal-slot update model
+* improve battery calculation for system which has several batteries
 
 Ver.2.3.1:
 - fix bug with no updates from configuration UI
